<resources>
    <string name="app_name">Primer Proyecto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="taskimage">taskImage</string>
    <string name="label">Label</string>
    <string name="tasks">Tasks</string>
    <string name="go_back">Go back</string>
    <string name="introduce_your_task">Introduce your task</string>
    <string name="add_task">Add Task</string>
    <string name="show_image">Show Image</string>
    <string name="task">Task</string>
    <string name="task_name">Task name</string>
    <string name="go_tasks">Go tasks</string>
    <string name="pokemon_api">Pokemon API</string>
    <string name="go_next">Go next</string>
    <string name="login_task"><![CDATA[Login & Task]]></string>
    <string name="go_pokemon">Go Pokemon</string>
    <string name="pokemon_image">pokemon_image</string>
    <string name="pokemon_name">POKEMON_NAME</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>

</resources>
